--- a/assets/advance.html
+++ b/assets/advance.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="grid">
-        <div class="grid-item"><a href="../index.html" class="roboto-medium rainbow-text"><span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span></a></div>  
+        <div class="grid-item"><a href="../index.html">Google Search</a></div>  
     </div>
     <div id="container"> 
         <div>
